payment completed with app